examples/fail/unbound_var.uplp
not_a_bound_identifier